--- a/src/app/componentes/menu/header/header.component.css
+++ b/src/app/componentes/menu/header/header.component.css
@@ -22,6 +22,7 @@ button {
 
 mat-toolbar {
     background: #f7f7f7;
+    /*background: #0f172a;*/
 }
 
 .user-image-icon {
@@ -48,4 +49,10 @@ mat-toolbar {
 
 .mat-list-item ::ng-deep .mat-list-item-content :hover ::before {
     background: #b6b7b9 !important;
+}
+
+@media only screen and (max-width: 700px) {
+    .header2 {
+        display: none;
+    }
 }
