--- a/src/app/componentes/menu/header/header.component.html
+++ b/src/app/componentes/menu/header/header.component.html
@@ -3,6 +3,10 @@
         <button mat-icon-button (click)="toggleSidebar()">
         <mat-icon>menu</mat-icon>
       </button>
+
+        <div class="header2">
+            <mat-icon style="color: rgb(15, 15, 16);">dashboard</mat-icon>
+        </div>
         <div class="row mr-2 ml-auto">
             <ul class="row m-0 align-items-center">
                 <li>
